vlib/v/checker/tests/unknown_fn_call_err.vv
module main

fn main() {
	C.printf(c'%f\n', sin(2))
}
